--- a/index.html
+++ b/index.html
@@ -406,9 +406,9 @@ Artikeln har lagts till i varukorgen</h2>
                 En fest du aldrig glömmer!
               </h2>
 							<div class="image-with-text__text rte body">
-								<p>På DjInhammar erbjuder vi uthyrning av olika typer av musikutrustning så som DJ-bord, högtalare och lasrar. </p>
+								<p>På DjInhammar erbjuder vi uthyrning av olika typer av musikutrustning så som DJ-bord, högtalare och laserutrustning. </p>
 								<p>Vi har allt du behöver för att skapa en minnesvärd fest, oavsett om det är en bröllopsfest, kalas eller bara en riktigt skön fest. </p>
-								<p>Med våra professionella DJ:s och högkvalitativa ljudsystem kan du räkna med en kväll fylld med musik och dans. Vårt mål är att hjälpa dig att skapa en oförglömlig festupplevelse för dig och dina gäster.</p>
+								<p>Med våra professionella DJ:s, fotografter och högkvalitativa ljudsystem kan du räkna med en kväll fylld med musik och dans. Vårt mål är att hjälpa dig att skapa en oförglömlig festupplevelse för dig och dina gäster.</p>
 							</div>
 						</div>
 					</div>
@@ -471,7 +471,7 @@ Artikeln har lagts till i varukorgen</h2>
 													<path d="M3.73691 2.50806V18.7232H16.2631V2.50806H14.4981V1.50806H16.2631C16.8154 1.50806 17.2631 1.95577 17.2631 2.50806V18.7232C17.2631 19.2755 16.8154 19.7232 16.2631 19.7232H3.73691C3.18462 19.7232 2.73691 19.2755 2.73691 18.7232V2.50806C2.73691 1.95577 3.18462 1.50806 3.73691 1.50806H5.75974V2.50806L3.73691 2.50806Z" />
 												</svg>
 												<h3 class="accordion__title h4">
-                      Vad är era priser?
+                      Vad är våra priser?
                     </h3>
 												<svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-caret" viewBox="0 0 10 6">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M9.354.646a.5.5 0 00-.708 0L5 4.293 1.354.646a.5.5 0 00-.708.708l4 4a.5.5 0 00.708 0l4-4a.5.5 0 000-.708z" fill="currentColor">
@@ -493,7 +493,7 @@ Artikeln har lagts till i varukorgen</h2>
 													<path d="M10.2255 15.5337L11.4477 16.756C12.4796 17.7879 14.1526 17.7879 15.1845 16.756C16.2164 15.7241 16.2164 14.051 15.1845 13.0191L10.2255 8.06003L5.26638 13.0191C4.23448 14.051 4.23448 15.7241 5.26638 16.756C6.29828 17.7879 7.97134 17.7879 9.00324 16.756L10.2255 15.5337ZM10.9326 7.35292L15.8916 12.312C17.3141 13.7344 17.3141 16.0406 15.8916 17.4631C14.4692 18.8855 12.163 18.8855 10.7406 17.4631L10.2255 16.948L9.71034 17.4631C8.28792 18.8855 5.9817 18.8855 4.55927 17.4631C3.13685 16.0406 3.13685 13.7344 4.55927 12.312L9.51834 7.35292C9.90887 6.9624 10.542 6.9624 10.9326 7.35292Z" />
 												</svg>
 												<h3 class="accordion__title h4">
-                      Vad erbjuder ni för tjänster?
+                      Vad erbjuder vi för tjänster?
                     </h3>
 												<svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-caret" viewBox="0 0 10 6">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M9.354.646a.5.5 0 00-.708 0L5 4.293 1.354.646a.5.5 0 00-.708.708l4 4a.5.5 0 00.708 0l4-4a.5.5 0 000-.708z" fill="currentColor">
