--- a/index.html
+++ b/index.html
@@ -500,7 +500,17 @@ Artikeln har lagts till i varukorgen</h2>
 												</svg>
 											</summary>
 											<div class="accordion__content rte" id="CollapsibleAccordion-row-3-template--16569987072267__collapsible-content" role="region" aria-labelledby="Summary-row-3-template--16569987072267__collapsible-content">
-												<p>DjInhammar erbjuder många former av underhållning så som Live dj, fotograf, Music quiz och mycket mer. Vi erbjuder även uthyrning av allt fest relaterat. Om du som kund har frågor så går det utmärkt att kontakta oss på våran email djinhammar@gmail.com</p>
+												<p>DjInhammar erbjuder:
+													<p>* Ljud system </p>
+													<p>* Ljus system</p>
+													<p>* Musikvärd</p>
+													<p>* Musicquiz</p>
+													<p>* Konferencier</p>
+													<p>* Rökmaskin	</p>
+													<p>* Karaoke</p>
+													<p>* Projector</p>
+												</p>
+												<p>Om du som kund har andra önskemål som inte står med så går det utmärkt att kontakta oss på våran email djinhammar@gmail.com så gör vi vårat bästa för att hjälpa dig.</p>
 											</div>
 										</details>
 									</div>
