--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ Artikeln har lagts till i varukorgen</h2>
 													<path d="M10.2255 15.5337L11.4477 16.756C12.4796 17.7879 14.1526 17.7879 15.1845 16.756C16.2164 15.7241 16.2164 14.051 15.1845 13.0191L10.2255 8.06003L5.26638 13.0191C4.23448 14.051 4.23448 15.7241 5.26638 16.756C6.29828 17.7879 7.97134 17.7879 9.00324 16.756L10.2255 15.5337ZM10.9326 7.35292L15.8916 12.312C17.3141 13.7344 17.3141 16.0406 15.8916 17.4631C14.4692 18.8855 12.163 18.8855 10.7406 17.4631L10.2255 16.948L9.71034 17.4631C8.28792 18.8855 5.9817 18.8855 4.55927 17.4631C3.13685 16.0406 3.13685 13.7344 4.55927 12.312L9.51834 7.35292C9.90887 6.9624 10.542 6.9624 10.9326 7.35292Z" />
 												</svg>
 												<h3 class="accordion__title h4">
-                      Vad erbjuder vi för tjänster?
+													Urval av tjänster och produkter
                     </h3>
 												<svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-caret" viewBox="0 0 10 6">
 													<path fill-rule="evenodd" clip-rule="evenodd" d="M9.354.646a.5.5 0 00-.708 0L5 4.293 1.354.646a.5.5 0 00-.708.708l4 4a.5.5 0 00.708 0l4-4a.5.5 0 000-.708z" fill="currentColor">
@@ -509,6 +509,7 @@ Artikeln har lagts till i varukorgen</h2>
 													<p>* Rökmaskin	</p>
 													<p>* Karaoke</p>
 													<p>* Projector</p>
+													<p>* Live DJ</p>
 												</p>
 												<p>Om du som kund har andra önskemål som inte står med så går det utmärkt att kontakta oss på våran email djinhammar@gmail.com så gör vi vårat bästa för att hjälpa dig.</p>
 											</div>
