--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 	<div id="shopify-section-announcement-bar" class="shopify-section">
 		<div class="announcement-bar color-accent-1 gradient" role="region" aria-label="Meddelande">
 			<div class="page-width">
-				<p class="announcement-bar__message center h5"> Välkommen till DjInhammar! </p>
+				<p class="announcement-bar__message center h5"> Välkommen till Dj🎧Inhammar! </p>
 			</div>
 		</div>
 	</div>
@@ -345,7 +345,7 @@
 		</svg>
 		<sticky-header class="header-wrapper color-background-1 gradient">
 			<header class="header header--middle-left header--mobile-center page-width">
-				<h1 class="header__heading"><a href="/" class="header__heading-link link link--text focus-inset"><span class="h2">DjInhammar</span></a></h1> </header>
+				<h1 class="header__heading"><a href="/" class="header__heading-link link link--text focus-inset"><span class="h2">Dj🎧Inhammar</span></a></h1> </header>
 		</sticky-header>
 		<cart-notification>
 			<div class="cart-notification-wrapper page-width">
@@ -377,8 +377,8 @@ Artikeln har lagts till i varukorgen</h2>
 			display: none;
 		}
 		</style>
-		<script type="application/ld+json"> { "@context": "http://schema.org", "@type": "Organization", "name": "DjInhammar", "sameAs": [ "", "", "", "", "", "", "", "", "" ], "url": "https:\/\/djinhammar.myshopify.com" } </script>
-		<script type="application/ld+json"> { "@context": "http://schema.org", "@type": "WebSite", "name": "DjInhammar", "potentialAction": { "@type": "SearchAction", "target": "https:\/\/djinhammar.myshopify.com\/search?q={search_term_string}", "query-input": "required name=search_term_string" }, "url": "https:\/\/djinhammar.myshopify.com" } </script>
+		<script type="application/ld+json"> { "@context": "http://schema.org", "@type": "Organization", "name": "Dj🎧Inhammar", "sameAs": [ "", "", "", "", "", "", "", "", "" ], "url": "https:\/\/djinhammar.myshopify.com" } </script>
+		<script type="application/ld+json"> { "@context": "http://schema.org", "@type": "WebSite", "name": "Dj🎧Inhammar", "potentialAction": { "@type": "SearchAction", "target": "https:\/\/djinhammar.myshopify.com\/search?q={search_term_string}", "query-input": "required name=search_term_string" }, "url": "https:\/\/djinhammar.myshopify.com" } </script>
 	</div>
 	<main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
 		<div id="shopify-section-template--16569987072267__image-with-text" class="shopify-section section">
