--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ Artikeln har lagts till i varukorgen</h2>
                 En fest du aldrig glömmer!
               </h2>
 							<div class="image-with-text__text rte body">
-								<p>På DjInhammar erbjuder vi uthyrning av olika typer av musikutrustning så som DJ-bord, högtalare och laserutrustning. </p>
+								<p>Vi på DjInhammar är lokaliserade i Skara men erbjuder tjänster som uthyrning av olika typer av musikutrustning så som DJ-bord, högtalare och laserutrustning i hela Sverige. </p>
 								<p>Vi har allt du behöver för att skapa en minnesvärd fest, oavsett om det är en bröllopsfest, kalas eller bara en riktigt skön fest. </p>
 								<p>Med våra professionella DJ:s, fotografter och högkvalitativa ljudsystem kan du räkna med en kväll fylld med musik och dans. Vårt mål är att hjälpa dig att skapa en oförglömlig festupplevelse för dig och dina gäster.</p>
 							</div>
