--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="theme-color" content="">
+	<meta name="keywords" content="Musik, DJ, Skara, Skaraborg, Skaraborg uthyrning, Högtalare Skara, Högtalare Skaraborg"
 	<title>Dj🎧Inhammar</title>
 	<link rel="stylesheet" href="base.css">
 
