--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="theme-color" content="">
 	<meta name="keywords" content="Musik, DJ, Skara, Skaraborg, Skaraborg uthyrning, Högtalare Skara, Högtalare Skaraborg"
-	<title>Dj🎧Inhammar</title>
+	<title>Dj Inhammar</title>
 	<link rel="stylesheet" href="base.css">
 
 	<script integrity="sha256-pfEFLtGor1q9LzHf7xpslSiKa+MZ45v9cHL18ZbWNhI=" data-source-attribution="shopify.loadfeatures" defer="defer" src="//cdn.shopify.com/shopifycloud/shopify/assets/storefront/load_feature-a5f1052ed1a8af5abd2f31dfef1a6c95288a6be319e39bfd7072f5f196d63612.js" crossorigin="anonymous"></script>
