--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="theme-color" content="">
 	<meta name="keywords" content="Musik, DJ, Skara, Skaraborg, Skaraborg uthyrning, Högtalare Skara, Högtalare Skaraborg, Fest Skara, Dj Skövde, dj Lidköping, Dj">
+	<meta name="description" content="Vi har allt du kan behöva till en fest så som en professionell DJ, Högtalare eller kanske en rökmaskin!">
 	<title>Dj Inhammar</title>
 	<link rel="stylesheet" href="base.css">
 
