--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html class="no-js" lang="sv">
 
@@ -8,6 +7,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="theme-color" content="">
 	<meta name="keywords" content="Musik, DJ, Skara, Skaraborg, Skaraborg uthyrning, Högtalare Skara, Högtalare Skaraborg, Fest Skara, Dj Skövde, dj Lidköping, Dj">
+	<meta name="description" content="Vi har allt du kan behöva till en fest så som en professionell DJ, Högtalare eller kanske en rökmaskin!">
 	<meta name="description" content="Vi har allt du kan behöva till en fest så som en professionell DJ, Högtalare eller kanske en rökmaskin!">
 	<title>Dj Inhammar</title>
 	<link rel="stylesheet" href="base.css">
@@ -401,7 +401,7 @@ Artikeln har lagts till i varukorgen</h2>
 			<div class="image-with-text image-with-text--no-overlap page-width isolate collapse-corners section-template--16569987072267__image-with-text-padding">
 				<div class="image-with-text__grid grid grid--gapless grid--1-col grid--2-col-tablet image-with-text__grid--reverse">
 					<div class="image-with-text__media-item image-with-text__media-item--medium image-with-text__media-item--middle grid__item">
-						<div class="image-with-text__media image-with-text__media--adapt gradient color-background-2 global-media-settings media" style="padding-bottom: 66.71999999999998%;"><img src="dj-crowd.webp" width="1500" height="1001" loading="lazy" sizes="(min-width: 1600px) 750px, (min-width: 750px) calc((100vw - 130px) / 2), calc((100vw - 50px) / 2)"> </div>
+						<div class="image-with-text__media image-with-text__media--adapt gradient color-background-2 global-media-settings media" style="padding-bottom: 66.71999999999998%;"><img src="dj-crowd.webp" width="1500" height="1001" alt="DJ" loading="lazy" sizes="(min-width: 1600px) 750px, (min-width: 750px) calc((100vw - 130px) / 2), calc((100vw - 50px) / 2)"> </div>
 					</div>
 					<div class="image-with-text__text-item grid__item">
 						<div id="ImageWithText--template--16569987072267__image-with-text" class="image-with-text__content image-with-text__content--middle image-with-text__content--desktop-left image-with-text__content--mobile-left image-with-text__content--adapt gradient color-background-2 content-container">
