--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="theme-color" content="">
-	<meta name="keywords" content="Musik, DJ, Skara, Skaraborg, Skaraborg uthyrning, Högtalare Skara, Högtalare Skaraborg, Fest Skara, Dj Skövde, dj Lidköping, Dj">
+	<meta name="keywords" content="Bröllop, Party, Ljus, Ljud, Musicquiz, Djinhammar, ljudutrustning, Ljusutrustning, Ljusuthyrning, Musik skara, DJ, Skara, Skaraborg, Skaraborg uthyrning, Högtalare Skara, Högtalare Skaraborg, Fest Skara, Dj Skövde, dj Lidköping, Dj">
 	<meta name="description" content="Vi har allt du kan behöva till en fest så som en professionell DJ, Högtalare eller kanske en rökmaskin!">
 	<meta name="description" content="Vi har allt du kan behöva till en fest så som en professionell DJ, Högtalare eller kanske en rökmaskin!">
 	<title>Dj Inhammar</title>
